SPCTR-2093: Fixed Number Control Alignment Issue and Text Control Border Issues

--- a/src/components/number-control/editor.lazy.scss
+++ b/src/components/number-control/editor.lazy.scss
@@ -39,10 +39,6 @@
 				width: 100%;
 			}
 
-			.components-number-control {
-				display: grid;
-			}
-
 		}
 
 	}
